# setup-environment-gasparsegura

./: CMakeLists.txt  Doxyfile  README.md
.github/actions/coverage_and_test/: action.yml
.github/actions/documentation/: action.yml
.github/actions/style/: action.yml
include/: memmem.h
lib/libdyn/: CMakeLists.txt
lib/libdyn/include/: dynamic_memmem.h
lib/libdyn/src/: dynamic_memmem.c
lib/libsta/: CMakeLists.txt
lib/libsta/include/: static_memmem.h
lib/libsta/src/: static_memmem.c
src/: main.c  memmem.c
tests/: CMakeLists.txt
tests/unit/: test_memmem.c
